# github-actions-practice

./: .clang-tidy  .dockerignore  CMakeLists.txt  Dockerfile  README.md  config.json  deployment.yaml  main.cpp  vcpkg.json
.cache/clangd/index/: main.cpp.D76B8012863CD48D.idx
.github/workflows/: github-actions.yml  publish-ghcr.yaml
src/: CityInfoController.cpp  CityInfoController.h  HelloController.cpp  HelloController.h
src/.cache/clangd/index/: CityInfoController.cpp.5D530FAE5EF42E42.idx  CityInfoController.h.D848712FD133B915.idx  HelloController.cpp.4C767F2AA7349E77.idx  HelloController.h.36A80E9B2DDA6259.idx
test/test_cityinfo/: getcity_test.cpp
test/test_hello/: hello_test.cpp
